fix static file

--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -84,7 +84,7 @@
           >
             <img
               class="card-img-top"
-              src="/static/images/LOGO_DPD.svg"
+              src="/public/images/LOGO_DPD.svg"
               alt="Title"
             />
 
@@ -113,7 +113,7 @@
           >
             <img
               class="card-img-top"
-              src="/static/images/LOGO_DPRRI.svg"
+              src="/public/images/LOGO_DPRRI.svg"
               alt="Title"
             />
             <hr />
@@ -142,7 +142,7 @@
           >
             <img
               class="card-img-top"
-              src="/static/images/Lambang_DPRD_Generik.png"
+              src="/public/images/Lambang_DPRD_Generik.png"
               alt="Title"
             />
             <hr />
@@ -171,7 +171,7 @@
           >
             <img
               class="card-img-top"
-              src="/static/images/Lambang_DPRD_Generik.png"
+              src="/public/images/Lambang_DPRD_Generik.png"
               alt="Title"
             />
             <hr />
